--- a/Tema2-FormatoTexto/MainWindow.xaml
+++ b/Tema2-FormatoTexto/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tema2_FormatoTexto"
         mc:Ignorable="d"
+        Icon="assets/edit.ico"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <TextBox x:Name="miTexto_TextBox" HorizontalAlignment="Left" Height="70" Margin="79,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192" TextChanged="TextBox_TextChanged" FontSize="14"/>
